Transportvalidierung und Transportaddition

--- a/test/fixtures/firmen.yml
+++ b/test/fixtures/firmen.yml
@@ -7,9 +7,11 @@ one:
   ort: MyString
   beschreibung: MyText
 
-two:
-  name: MyString
+kieserling:
+  name: Kieserling
   adresse: MyString
   plz: MyString
-  ort: MyString
+  ort: Bremen
   beschreibung: MyText
+
+
