--- a/test/fixtures/anlagen.yml
+++ b/test/fixtures/anlagen.yml
@@ -15,3 +15,11 @@ anf:
   plz: MyString
   ort: Lingen
   beschreibung: MyText
+
+russland:
+  id: 3
+  name: Ruslland 
+  adresse: MyString
+  plz: MyString
+  ort: Russland
+  beschreibung: MyText
