--- a/test/fixtures/transporte.yml
+++ b/test/fixtures/transporte.yml
@@ -17,3 +17,21 @@ two:
   behaelter: MyString
   start_anlage_id: 1
   ziel_anlage_id: 2
+
+petersburg_lingen1:
+  id: 3
+  datum: 2012-07-05
+  menge: 1.5
+  stoff: UF6 ang.
+  start_anlage_id: 3
+  ziel_anlage_id: 2
+
+petersburg_lingen2:
+  id: 4
+  datum: 2012-07-05
+  stoff: UF6
+  behaelter: 48Y
+  anzahl: 12
+  start_anlage_id: 3
+  ziel_anlage_id: 2
+
