--- a/test/fixtures/umschlaege.yml
+++ b/test/fixtures/umschlaege.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one: 
+  ort: Bremen
+  terminal: Südwest
+  firma: 1
+  transport_id: 3
 #
 two: {}
 #  column: value
