--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
+anna:
+  name: Anna
+  email: anna@nirgendwo.info
 
-two:
-  name: MyString
-  email: MyString
+arthur:
+  name: Arthur
+  email: arthur@nirgendwo.info
