Abfragen verbessert, fixed #38

--- a/test/fixtures/transportabschnitte.yml
+++ b/test/fixtures/transportabschnitte.yml
@@ -5,15 +5,15 @@
 # below each fixture, per the syntax in the comments below
 #
 petersburg_hamburg: 
-  start_ort: St. Petersburg
-  end_ort: Hamburg
+  start_ort_id: 4
+  end_ort_id: 3
   transport_id: 3
   start_datum: 2012-07-01
   end_datum: 2012-07-04
 
 hamburg_lingen_1: 
-  start_ort: Hamburg
-  end_ort: Lingen
+  start_ort_id: 3
+  end_ort_id: 2
   firma_id: 1
   transport_id: 3
   start_datum: 2012-07-05
@@ -21,15 +21,15 @@ hamburg_lingen_1:
 
 
 hamburg_lingen: 
-  start_ort: Hamburg
-  end_ort: Lingen
+  start_ort_id: 3
+  end_ort_id: 2
   firma_id: 1
   transport_id: 4
 #  column: value
 
 
 to_delete: 
-  start_ort: Hamburg
-  end_ort: Lingen
+  start_ort_id: 3
+  end_ort_id: 2
   firma_id: 1
   transport_id: 1
