mengen fehlerbeseitigung, tests

--- a/test/fixtures/transporte.yml
+++ b/test/fixtures/transporte.yml
@@ -3,7 +3,7 @@
 one:
   id: 1
   datum: 2013-09-01
-  menge: 1.5
+  menge_brutto: 1.5
   stoff_id: 1
   behaelter: MyString
   start_anlage_id: 1
@@ -12,7 +12,7 @@ one:
 two:
   id: 2
   datum: 2011-06-05
-  menge: 1.5
+  menge_netto: 1.5
   behaelter: MyString
   start_anlage_id: 1
   ziel_anlage_id: 2
@@ -20,7 +20,7 @@ two:
 petersburg_lingen1:
   id: 3
   datum: 2012-07-05
-  menge: 1.5
+  menge_netto: 1.5
   stoff_id: 2
   start_anlage_id: 3
   ziel_anlage_id: 2
