--- a/test/fixtures/durchfahrtsorte.yml
+++ b/test/fixtures/durchfahrtsorte.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  index: 1
+  reihung: 1
   ort_id: 1
   route_id: 1
 
 two:
-  index: 2
+  reihung: 2
   ort_id: 2
   route_id: 1
