--- a/test/fixtures/anlagen_kategorien.yml
+++ b/test/fixtures/anlagen_kategorien.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+uaa:
+  id: 1
+  name: Urananreicherung
 
-two:
-  name: MyString
+akw:
+  id: 2
+  name: AKW
